--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -150,7 +150,26 @@
 						_outputdeaths = {{ output_data_list_deaths|safe }}
 						_outputnames = {{ output_region_names|safe }}
 						_datatype = {{ data_type|safe }}	
-						
+
+						if (_datatype[0] == ["Incremental"]){
+							_datatype = ["Daily New"]
+						}
+
+						var confirmed_data = []
+						var deaths_data = []
+
+						for (var series=0; series<_outputnames.length; series++){
+							series_confirmed_data = {}
+							series_confirmed_data['name'] = _outputnames[series]
+							series_confirmed_data['data'] = _outputconfirmed[series]
+							confirmed_data.push(series_confirmed_data)
+
+							series_deaths_data = {}
+							series_deaths_data['name'] = _outputnames[series]
+							series_deaths_data['data'] = _outputdeaths[series]
+							deaths_data.push(series_deaths_data)
+						}
+
 						Highcharts.chart('container1', {
 							chart: {type: 'line'},
 							rangeSelector: { selected: 4},
@@ -159,20 +178,7 @@
 						  	yAxis: {title: {text: null}},
 						  	plotOptions: {series: {marker: {radius: 1}}},
 						  	legend: {symbolWidth:10,itemStyle:{"fontSize":'10px'}},
-							series: [
-								{name: _outputnames[0], data: _outputconfirmed[0]},
-								{name: _outputnames[1], data: _outputconfirmed[1]},
-								{name: _outputnames[2], data: _outputconfirmed[2]},
-								{name: _outputnames[3], data: _outputconfirmed[3]},
-								{name: _outputnames[4], data: _outputconfirmed[4]},
-								{name: _outputnames[5], data: _outputconfirmed[5]},
-								{name: _outputnames[6], data: _outputconfirmed[6]},
-								{name: _outputnames[7], data: _outputconfirmed[7]},
-								{name: _outputnames[8], data: _outputconfirmed[8]},
-								{name: _outputnames[9], data: _outputconfirmed[9]},
-								{name: _outputnames[10], data: _outputconfirmed[10]},
-								{name: _outputnames[11], data: _outputconfirmed[11]},
-							]
+							series: confirmed_data,
 						})
 					</script>
 				</div>
@@ -201,20 +207,7 @@
 						  	yAxis: {title: {text: null}},
 						  	plotOptions: {series: {marker: {radius: 1}}},
 						  	legend: {symbolWidth:10,itemStyle:{"fontSize":'10px'}},
-							series: [
-								{name: _outputnames[0], data: _outputdeaths[0]},
-								{name: _outputnames[1], data: _outputdeaths[1]},
-								{name: _outputnames[2], data: _outputdeaths[2]},
-								{name: _outputnames[3], data: _outputdeaths[3]},
-								{name: _outputnames[4], data: _outputdeaths[4]},
-								{name: _outputnames[5], data: _outputdeaths[5]},
-								{name: _outputnames[6], data: _outputdeaths[6]},
-								{name: _outputnames[7], data: _outputdeaths[7]},
-								{name: _outputnames[8], data: _outputdeaths[8]},
-								{name: _outputnames[9], data: _outputdeaths[9]},
-								{name: _outputnames[10], data: _outputdeaths[10]},
-								{name: _outputnames[11], data: _outputdeaths[11]},
-							]
+							series: deaths_data,
 						})
 					</script>
 				</div>
