--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -88,33 +88,21 @@
 		
 
 		<div>
-			<div style="float:left;width:70%">
+			<div style="float:left;">
 				<form action='' method="POST" onChange="this.submit()" style="padding-top:20px">
 					{% csrf_token %}
 					<p style="margin:2px">Date period: &nbsp{{ dashboard_form.date_range }} </p>
-					<p style="margin:2px">Data type: &nbsp &nbsp {{ data_type_form.data_type}} </p>
+					<p style="margin:2px">Data type:&nbsp &nbsp &nbsp{{ data_type_form.data_type}} </p>
 				</form>
 			</div>
-			<div style="float:right; width:30%">
-				<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="padding:10px;">Click to modify chart data</button>
+
+			<div style="float:right; width:30%;">
+				<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#country-selection-modal" style="padding:5px;width:100%;margin:2px;font-size:14px;text-align: left"> &nbsp <i class="fa fa-filter" style="font-size: 20px; color:#FFFFFF"></i>&nbsp Update country </button>
+
+				<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#state-selection-modal" style="padding:5px;width:100%;margin:2px;font-size:14px;text-align:left;"> &nbsp <i class="fa fa-filter" style="font-size: 20px; color:#FFFFFF"></i>&nbsp Update state</button>
 			</div>
-		</div>
 
-
-		<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="margin-top:20%; clear:both">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-body" style="align-self: center">
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				  				<span aria-hidden="true">&times;</span>
-				  		</button>
-						<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#country-selection-modal" style="padding:10px;width:210px;margin:5px">Update country selection</button>
-
-						<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#state-selection-modal" style="padding:10px;width:210px;margin:5px">Update state selection</button>
-					</div>
-				</div>
-			</div>
-			
+				
 
 			<div id = "country-selection-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 				<form action = "" method = "POST" class = "countrymodalform"> 
@@ -129,7 +117,7 @@
 				  		</div>
 			  			<div class="modal-body">	
 
-							<input type="button" onclick='UnSelectAllCountries()' value="Unselect All"/>
+							<input type="button" class="btn btn-light btn-xs" style="font-size:14px; font-weight:550;margin-left:15px; margin-bottom:5px"onclick='UnSelectAllCountries()' value="Unselect All"/>
 		  					{% csrf_token %}
 		  					{{ dashboard_form.countries}}
 			  			</div>
@@ -154,7 +142,7 @@
 					  		</div>
 				  		</div>
 			  			<div class="modal-body">	
-			  				<input type="button" onclick='UnSelectAllStates()' value="Unselect All"/>
+			  				<input type="button" class="btn btn-light btn-xs" style="font-size:14px; font-weight:550;margin-left:10px; margin-bottom:8px"onclick='UnSelectAllStates()' value="Unselect All"/>
 			  				{% csrf_token %}
 			  				{{ dashboard_form.states}}	
 			  			</div>
@@ -165,7 +153,7 @@
 			  		</div>
 				  </div>
 				</form>
-			</div> 
+			</div>
 
 			<script>
 				function UnSelectAllCountries(){
@@ -183,12 +171,12 @@
 					}
 				}
 			</script>	
-
 		</div>
+
 		
 		<div style="clear:both; height:10px"></div>
 
-		<div id="container1" style="min-width: 400px; max-height: 80%; margin: 0 auto" class="border">
+		<div id="container1" style="min-width: 400px; height: 70%; margin: 0 auto" class="border">
 			<script src="https://code.highcharts.com/highcharts.js"> </script>
 			<script src="https://code.highcharts.com/modules/exporting.js"> </script>
 			<script src="https://code.highcharts.com/modules/export-data.js"> </script>
@@ -199,7 +187,26 @@
 				_outputconfirmed = {{ output_data_list_confirmed|safe }}
 				_outputdeaths = {{ output_data_list_deaths|safe }}
 				_outputnames = {{ output_region_names|safe }}
-				_datatype = {{ data_type|safe }}	
+				_datatype = {{ data_type|safe }}
+
+				if (_datatype[0] == ["Incremental"]){
+					_datatype = ["Daily New"]
+				}
+
+				var confirmed_data = []
+				var deaths_data = []
+
+				for (var series=0; series<_outputnames.length; series++){
+					series_confirmed_data = {}
+					series_confirmed_data['name'] = _outputnames[series]
+					series_confirmed_data['data'] = _outputconfirmed[series]
+					confirmed_data.push(series_confirmed_data)
+
+					series_deaths_data = {}
+					series_deaths_data['name'] = _outputnames[series]
+					series_deaths_data['data'] = _outputdeaths[series]
+					deaths_data.push(series_deaths_data)
+				}
 				
 				Highcharts.chart('container1', {
 					chart: {type: 'line'},
@@ -208,20 +215,7 @@
 				  	xAxis: {categories: _dates, tickInterval:3},
 				  	yAxis: {title: {text: null}},
 				  	plotOptions: {series: {marker: {radius: 1}}},
-					series: [
-						{name: _outputnames[0], data: _outputconfirmed[0]},
-						{name: _outputnames[1], data: _outputconfirmed[1]},
-						{name: _outputnames[2], data: _outputconfirmed[2]},
-						{name: _outputnames[3], data: _outputconfirmed[3]},
-						{name: _outputnames[4], data: _outputconfirmed[4]},
-						{name: _outputnames[5], data: _outputconfirmed[5]},
-						{name: _outputnames[6], data: _outputconfirmed[6]},
-						{name: _outputnames[7], data: _outputconfirmed[7]},
-						{name: _outputnames[8], data: _outputconfirmed[8]},
-						{name: _outputnames[9], data: _outputconfirmed[9]},
-						{name: _outputnames[10], data: _outputconfirmed[10]},
-						{name: _outputnames[11], data: _outputconfirmed[11]},
-					]
+				  	series: confirmed_data
 				})
 			</script>
 		</div>
@@ -241,7 +235,7 @@
 		<div style="min-height: 30px; max_height: 100px; min_width: 3000px"> </div>
 
 
-		<div id="container2" style="min-width: 400px; max-height: 80%; margin: 0 auto" class="border">
+		<div id="container2" style="min-width: 400px; height: 70%; margin: 0 auto" class="border">
 			<script>
 				Highcharts.chart('container2', {
 					chart: {type: 'line'},
@@ -250,26 +244,13 @@
 				  	xAxis: {categories: _dates, tickInterval:3},
 				  	yAxis: {title: {text: null}},
 				  	plotOptions: {series: {marker: {radius: 1}}},
-					series: [
-						{name: _outputnames[0], data: _outputdeaths[0]},
-						{name: _outputnames[1], data: _outputdeaths[1]},
-						{name: _outputnames[2], data: _outputdeaths[2]},
-						{name: _outputnames[3], data: _outputdeaths[3]},
-						{name: _outputnames[4], data: _outputdeaths[4]},
-						{name: _outputnames[5], data: _outputdeaths[5]},
-						{name: _outputnames[6], data: _outputdeaths[6]},
-						{name: _outputnames[7], data: _outputdeaths[7]},
-						{name: _outputnames[8], data: _outputdeaths[8]},
-						{name: _outputnames[9], data: _outputdeaths[9]},
-						{name: _outputnames[10], data: _outputdeaths[10]},
-						{name: _outputnames[11], data: _outputdeaths[11]},
-					]
+				  	series: deaths_data,
 				})
 			</script>
 		</div>
 	</div>
 
-	<div class="vl"></div>
+	<div style="border-right:3px solid; border-right-color:#D3D3D3; min-height:850px; height:150%;position:absolute; left:70.5%"></div>
 
 
 	<div style="float:right; width:25%">
