--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -32,7 +32,7 @@
 		  float: left;
 		  left: 50%;
 		  top: 50%;
-		  transform: translate(-50%, -50%);
+		  transform: translate(50%, 50%);
 		}
 	</style>
 
@@ -44,12 +44,12 @@
 			<h4> Latest C19 Data </h4>
 			{% if user.is_authenticated %}
 			{% else %}
-				<p style="font-size: 12px"> To save your dashboard data selections, <a href="{% url 'account_login'%}">log in</a> or <a href="{% url 'override_signup' %}"> create an account </a></p>
+				<p style="font-size: 12px; margin-bottom:5px"> To save your dashboard data selections, <a href="{% url 'account_login'%}">log in</a> or <a href="{% url 'override_signup' %}"> create an account </a></p>
 			{% endif %}
 
 		</div>
 
-		<div>
+		<div style="padding-bottom: 5px">
 			
 			<form action = "", method = "POST", onChange="this.submit();">
 				{% csrf_token %}
@@ -97,7 +97,7 @@
 		</div>
 			
 		<div style="clear:both;padding-top:10px;margin:0px">
-			<hr>
+			<hr width:3px>
 		</div>
 
 		<!------------------------------------->
@@ -119,16 +119,20 @@
 					<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Click to modify chart data</button>
 
 
-					<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="clear:both">
-						<div class="modal-dialog">
+					<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="clear:both; position:absolute; top:50%">
+						<div class="modal-dialog" style="margin-top:30%">
 							<div class="modal-content" style="padding:0; margin:0">
-								<div class="modal-body" style="align-self: center; padding:0; margin:0">
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<div class = "modal-header">
+									<h2 class = "modal-title">Testing</h2>
+				                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							  				<span aria-hidden="true">&times;</span>
 							  		</button>
+				                    
+				                </div>
+								<div class="modal-body" style="align-self: left; padding-left:10px; margin:0"> 
 							  		<p> </p>
-									<p>Update country selection: {{ dashboard_form.countries}}</p>
-									<p>Update state selection:&nbsp &nbsp {{ dashboard_form.states}}</p>
+									<p>Update countries: {{ dashboard_form.countries}}</p>
+									<p>Update states:&nbsp &nbsp {{ dashboard_form.states}}</p>
 								</div>
 							</div>
 						</div>
