--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -97,9 +97,9 @@
 			</div>
 
 			<div style="float:right; width:30%;">
-				<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#country-selection-modal" style="padding:5px;width:100%;margin:2px;font-size:14px;text-align: left"> &nbsp <i class="fa fa-filter" style="font-size: 20px; color:#FFFFFF"></i>&nbsp Update country </button>
+				<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#country-selection-modal" style="padding:5px;width:100%;margin:2px;font-size:14px;text-align: left"> &nbsp <i class="fa fa-filter" style="font-size: 20px; color:#FFFFFF"></i>&nbsp Update countries </button>
 
-				<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#state-selection-modal" style="padding:5px;width:100%;margin:2px;font-size:14px;text-align:left;"> &nbsp <i class="fa fa-filter" style="font-size: 20px; color:#FFFFFF"></i>&nbsp Update state</button>
+				<button type="button" class="btn btn-dark" data-toggle="modal" data-target="#state-selection-modal" style="padding:5px;width:100%;margin:2px;font-size:14px;text-align:left;"> &nbsp <i class="fa fa-filter" style="font-size: 20px; color:#FFFFFF"></i>&nbsp Update states</button>
 			</div>
 
 				
@@ -111,7 +111,7 @@
 				    	<div class="modal-header">
 				  			<h5 class="modal-title" id="exampleModalLabel">Country-level data to include on dashboard</h5>
 				  			<div style="float:right">
-					  			<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+					  			<button type="button" class="btn bt-secondary" data-dismiss="modal">Cancel</button>
 				  				<button type="submit" name = "country_select_save" class="btn btn-primary"> Save changes </button>
 					  		</div>
 				  		</div>
