--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -120,7 +120,7 @@
 
 
 					<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="clear:both; position:absolute; top:50%">
-						<div class="modal-dialog" style="margin-top:30%">
+<!-- 						<div class="modal-dialog" style="margin-top:30%">
 							<div class="modal-content" style="padding:0; margin:0">
 								<div class = "modal-header">
 									<h2 class = "modal-title">Testing</h2>
@@ -135,7 +135,7 @@
 									<p>Update states:&nbsp &nbsp {{ dashboard_form.states}}</p>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</form>
 			</div>
