--- a/dashboard/templates/dashboard-index.html
+++ b/dashboard/templates/dashboard-index.html
@@ -111,7 +111,7 @@
 				    	<div class="modal-header">
 				  			<h5 class="modal-title" id="exampleModalLabel">Country-level data to include on dashboard</h5>
 				  			<div style="float:right">
-					  			<button type="button" class="btn bt-secondary" data-dismiss="modal">Cancel</button>
+					  			<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 				  				<button type="submit" name = "country_select_save" class="btn btn-primary"> Save changes </button>
 					  		</div>
 				  		</div>
