--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -26,14 +26,6 @@
 			margin-top:-10%;
 			width:116%;
 		}
-
-		.modal {
-		  position: absolute;
-		  float: left;
-		  left: 50%;
-		  top: 50%;
-		  transform: translate(50%, 50%);
-		}
 	</style>
 
 
@@ -119,7 +111,28 @@
 					<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Click to modify chart data</button>
 
 
-					<div id = "region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" style="clear:both; position:absolute; top:50%">
+					<div class="modal fade" id="region-filter-modal" role="dialog">
+					    <div class="modal-dialog" style="padding-top: 15%">
+					      	<!-- Modal content-->
+					      	<div class="modal-content">
+					        	<div class="modal-header">
+					          		<h5 class="modal-title">Update regions shown on charts</h5>
+					          		<button type="button" class="close" data-dismiss="modal">&times;</button>
+					       		 </div>
+					        	<div class="modal-body" style="align-self: left; padding-left:20px; margin:0"> 
+							  		<p> </p>
+									<p>Countries: {{ dashboard_form.countries}}</p>
+									<p>States:&nbsp &nbsp {{ dashboard_form.states}}</p>
+								</div>
+					        	<div class="modal-footer">
+					          		<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+			  						<button type="submit" name = "country_select_save" class="btn btn-primary"> Save changes </button>
+					        	</div>
+					      	</div>
+					     </div>
+					 </div>
+
+<!-- 					<div id = "123region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 						<div class="modal-dialog" style="margin-top:30%">
 							<div class="modal-content" style="padding:0; margin:0">
 								<div class = "modal-header">
@@ -136,7 +149,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</form>
 			</div>
 			
