mobile dashboard change form field length

--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -104,7 +104,7 @@
 							Date period: {{ dashboard_form.date_range }}
 						</div>
 						<div style="padding-top:2px">
-							Data type:&nbsp &nbsp {{ data_type_form.data_type}}
+							Data type:&nbsp &nbsp &nbsp{{ data_type_form.data_type}}
 						</div>
 					</div>
 
