mobile dashboard change form field length

--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -104,7 +104,7 @@
 							Date period: {{ dashboard_form.date_range }}
 						</div>
 						<div style="padding-top:2px">
-							Data type:&nbsp &nbsp &nbsp{{ data_type_form.data_type}}
+							Data type:&nbsp &nbsp {{ data_type_form.data_type}}
 						</div>
 					</div>
 
@@ -121,8 +121,8 @@
 					       		 </div>
 					        	<div class="modal-body" style="align-self: left; padding-left:20px; margin:0"> 
 							  		<p> </p>
-									<p>Countries: {{ dashboard_form.countries}}</p>
-									<p>States:&nbsp &nbsp {{ dashboard_form.states}}</p>
+									<p>Countries: &nbsp {{ dashboard_form.countries}}</p>
+									<p>States:&nbsp &nbsp &nbsp &nbsp {{ dashboard_form.states}}</p>
 								</div>
 					        	<div class="modal-footer">
 					          		<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
