mobile base and login template tweaks

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -31,9 +31,9 @@
 
 
 	<div style="padding-top:20px; padding-bottom:20px">
-		<button style="background-color:#4267B3;color:white;height:37px;width:230px;font-weight:500" onclick='window.location.href="{% provider_login_url "facebook" method="oauth2" %}" '> Sign in through Facebook </button>
+		<button style="background-color:#4267B3;color:white;height:37px;width:230px;font-weight:500; margin-bottom:10px" onclick='window.location.href="{% provider_login_url "facebook" method="oauth2" %}" '> Sign in through Facebook </button>
 
-		<button style="background-color:#EA4335;color:white;height:37px;width:230px;font-weight:500" onclick='window.location.href="{% provider_login_url "google" method="oauth2" %}" '> Sign in through Google </button>
+		<button style="background-color:#EA4335;color:white;height:37px;width:230px;font-weight:500; margin-bottom:10px" onclick='window.location.href="{% provider_login_url "google" method="oauth2" %}" '> Sign in through Google </button>
 	</div>
 
 {% endblock %}
