--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -65,10 +65,12 @@
 
 
 			{% if user.is_authenticated %}
-			    {% if user.first_name %}
-					<button class="btn btn-dark navbar-btn" style="margin: 2px"> Welcome, {{ user.first_name }}!</button>
-				{% else %}
-					<button class="btn btn-dark navbar-btn" style="margin: 2px"> Welcome, {{ user.get_username }}!</button>
+				{% if user_agent.is_mobile %}
+				    {% if user.first_name %}
+						<button class="btn btn-dark navbar-btn" style="margin: 2px"> Welcome, {{ user.first_name }}!</button>
+					{% else %}
+						<button class="btn btn-dark navbar-btn" style="margin: 2px"> Welcome, {{ user.get_username }}!</button>
+					{% endif %}
 				{% endif %}
 				<a class="btn btn-secondary navbar-btn" href="{% url 'account_logout' %}">Log Out</a>
 			{% else %}
