refresh with today's data

--- a/trends/templates/trends-index.html
+++ b/trends/templates/trends-index.html
@@ -7,6 +7,22 @@
 {% endblock %}
 
 {% block content %}
+<div> 
+	<h2> Data Representations </h2>
+</div>
+
+<div> 
+	This section is used for the charts
+	<div style="">
+		chart 1
+	</div>
+
+</div>
+
+
+
+
+
     <div class="container-fluid" style = "padding-top: 2%; padding-bottom:2%">
 		<h1> {{ country }} # Cases Confirmed </h1>
 	</div>
