refresh with today's data

--- a/trends/templates/trends-index.html
+++ b/trends/templates/trends-index.html
@@ -11,12 +11,19 @@
 	<h2> Data Representations </h2>
 </div>
 
-<div> 
+<div style="float:left, width:70%"> 
 	This section is used for the charts
 	<div style="">
 		chart 1
 	</div>
 
+</div>
+<div style="float:right, width:20%, max-width:300px">
+	<h4> Useful data sources </h4>
+	This is for links to data sources
+
+	<h4> Useful news sources </h4>
+	Useful news tracking sources
 </div>
 
 
