trying to fix mobile interface chart title

--- a/trends/templates/trends-index-mobile.html
+++ b/trends/templates/trends-index-mobile.html
@@ -163,7 +163,7 @@
 				            }
 				        }
 				    },
-				    legend: {layout:'horizontal', itemStyle:{"font-size":"10px"}, itemMarginTop:1},
+				    legend: {itemStyle:{"font-size":"10px"}},
 				    series: [
 				    	{name: "Europe", data: _death_rate_dict['Europe'], color: '#9DC6FF', },
 				    	{name: "Asia Pacific", data: _death_rate_dict['Asia Pacific'], color: '#DB71FF'},
