--- a/trends/templates/trends-index-mobile.html
+++ b/trends/templates/trends-index-mobile.html
@@ -36,7 +36,7 @@
 			<script src="https://code.highcharts.com/modules/exporting.js"> </script>
 			<script src="https://code.highcharts.com/modules/export-data.js"> </script>
 			<script src="https://code.highcharts.com/modules/accessibility.js"></script>
-			<script src="http://code.highcharts.com/highcharts-more.js"></script>
+			<script type="text/javascript" src="https://code.highcharts.com/highcharts-more.js"></script>
 			<script>
 				_dates = {{dates|safe}};
 				_breakdowndata = {{breakdown_data|safe}};
