trying to fix safari bug

--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -106,7 +106,7 @@
 
 	<footer class="page-footer font-small blue pt-4" style="clear:both;">
 
-	<div class="footer-copyright text-center py-3">All data from
+	<div class="footer-copyright text-center py-3" style="font-size:12px">All data from
 	<a href="https://github.com/CSSEGISandData/COVID-19"> John Hopkins </a>
 	</div>
 
