--- a/trends/templates/trends-index-mobile.html
+++ b/trends/templates/trends-index-mobile.html
@@ -36,7 +36,7 @@
 			<script src="https://code.highcharts.com/modules/exporting.js"> </script>
 			<script src="https://code.highcharts.com/modules/export-data.js"> </script>
 			<script src="https://code.highcharts.com/modules/accessibility.js"></script>
-			<script type="text/javascript" src="https://code.highcharts.com/highcharts-more.js"></script>
+			<script src="https://code.highcharts.com/highcharts-more.js"></script>
 			<script>
 				_dates = {{dates|safe}};
 				_breakdowndata = {{breakdown_data|safe}};
@@ -112,7 +112,8 @@
 		<div style="height:20%; padding-top: 1%; padding-bottom:1%; font-size:14px;font-weight:550">
 			Death rate by GDP Per Capita
 		</div>
-		<div id="container3" style="width:100%; height: 90%; margin: 0 auto;" class="border">		
+		<div id="container3" style="width:100%; height: 90%; margin: 0 auto;" class="border">	
+			<script src="https://code.highcharts.com/highcharts-more.js"></script>	
 			<script>
 				_death_rate_dict = {{ death_rate_dict|safe }}		
 
