--- a/trends/templates/trends-index.html
+++ b/trends/templates/trends-index.html
@@ -32,6 +32,7 @@
 		</div>
 		<div id="container1" style="width:100%; height: 90%; margin: 0 auto;" class="border">
 			<script src="https://code.highcharts.com/highcharts.js"> </script>
+			<script src="https://code.highcharts.com/highcharts-more.js"></script>
 			<script src="https://code.highcharts.com/modules/exporting.js"> </script>
 			<script src="https://code.highcharts.com/modules/export-data.js"> </script>
 			<script src="https://code.highcharts.com/modules/accessibility.js"></script>
@@ -110,9 +111,7 @@
 		<div style="height:10%; padding-top: 1%; padding-bottom:1%; font-size:14px;font-weight:550">
 			Death rate by GDP Per Capita
 		</div>
-		<div id="container3" style="width:100%; height: 90%; margin: 0 auto;" class="border">
-			<script src="http://code.highcharts.com/highcharts-more.js"></script>
-		
+		<div id="container3" style="width:100%; height: 90%; margin: 0 auto;" class="border">		
 			<script>
 				_death_rate_dict = {{ death_rate_dict|safe }}
 			
