fixed dashboard mobile auto submit bug

--- a/trends/templates/trends-index-mobile.html
+++ b/trends/templates/trends-index-mobile.html
@@ -149,7 +149,7 @@
 				        pointFormat: '<tr><th colspan="2"><h6>{point.country}</h6></th></tr>' +
 				            '<tr><th>GDP Per Capita:</th><td>${point.x:,.0f}</td></tr>' +
 				            '<tr><th>Death Rate:</th><td>{point.y}%</td></tr>' +
-				            '<tr><th>Total Confirmed Cases:</th><td>{point.z}%</td></tr>',
+				            '<tr><th>Total Confirmed Cases:</th><td>{point.z}</td></tr>',
 				        footerFormat: '</table>',
 				        followPointer: true
 				    },
