--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -97,7 +97,7 @@
 
 		<div>
 			<div style="clear:both; font-size:12px;">
-				<form action='' method="POST" onChange="this.submit()">
+				<form action='' method="POST">
 					{% csrf_token %}
 					<div style="float:left;">
 						<div>
@@ -132,24 +132,6 @@
 					     </div>
 					 </div>
 
-<!-- 					<div id = "123region-filter-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-						<div class="modal-dialog" style="margin-top:30%">
-							<div class="modal-content" style="padding:0; margin:0">
-								<div class = "modal-header">
-									<h2 class = "modal-title">Testing</h2>
-				                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							  				<span aria-hidden="true">&times;</span>
-							  		</button>
-				                    
-				                </div>
-								<div class="modal-body" style="align-self: left; padding-left:10px; margin:0"> 
-							  		<p> </p>
-									<p>Update countries: {{ dashboard_form.countries}}</p>
-									<p>Update states:&nbsp &nbsp {{ dashboard_form.states}}</p>
-								</div>
-							</div>
-						</div>
-					</div> -->
 				</form>
 			</div>
 			
