continued to try to fix country/selection error on mobile dashboard

--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -97,7 +97,7 @@
 
 		<div>
 			<div style="clear:both; font-size:12px;">
-				<form action='' method="POST">
+				<form action='' method="POST" onChange="this.submit()">
 					{% csrf_token %}
 					<div style="float:left;">
 						<div>
@@ -107,32 +107,34 @@
 							Data type:&nbsp &nbsp {{ data_type_form.data_type}}
 						</div>
 					</div>
+				</form>
 
-					<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Click to modify chart data</button>
+				<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Click to modify chart data</button>
 
-
-					<div class="modal fade" id="region-filter-modal" role="dialog">
-					    <div class="modal-dialog" style="padding-top: 15%">
-					      	<!-- Modal content-->
-					      	<div class="modal-content">
-					        	<div class="modal-header">
-					          		<h5 class="modal-title">Update regions shown on charts</h5>
-					          		<button type="button" class="close" data-dismiss="modal">&times;</button>
-					       		 </div>
+				<div class="modal fade" id="region-filter-modal" role="dialog">
+				    <div class="modal-dialog" style="padding-top: 15%">
+				      	<!-- Modal content-->
+				      	<div class="modal-content">
+				        	<div class="modal-header">
+				          		<h5 class="modal-title">Update regions shown on charts</h5>
+				          		<button type="button" class="close" data-dismiss="modal">&times;</button>
+				       		</div>
+				       		<form method="POST">
+				       			{% csrf_token %}
 					        	<div class="modal-body" style="align-self: left; padding-left:20px; margin:0"> 
-							  		<p> </p>
+								  	<p> </p>
 									<p>Countries: &nbsp {{ dashboard_form.countries}}</p>
-									<p>States:&nbsp &nbsp &nbsp &nbsp {{ dashboard_form.states}}</p>
+									<p style="margin-bottom:0;padding-bottom:0">States:&nbsp &nbsp &nbsp &nbsp {{ dashboard_form.states}}</p>
+									<p style="margin:0;padding:0;color:#878787;font-size:10px"> State/province data only available for US, Canada, China, UK, and Australia </p>
 								</div>
 					        	<div class="modal-footer">
 					          		<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
 			  						<button type="submit" name = "country_select_save" class="btn btn-primary"> Save changes </button>
 					        	</div>
-					      	</div>
-					     </div>
-					 </div>
-
-				</form>
+				        	</form>
+				      	</div>
+				     </div>
+				 </div>	
 			</div>
 			
 				<div style="clear:both; height:5px;"></div>
