--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -129,7 +129,7 @@
 								</div>
 					        	<div class="modal-footer">
 					          		<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-			  						<button type="submit" name = "country_select_save" class="btn btn-primary"> Save changes </button>
+			  						<button type="submit" name = "region_select_save" class="btn btn-primary"> Save changes </button>
 					        	</div>
 				        	</form>
 				      	</div>
