trying to fix trends page mobile bubble chart bug

--- a/trends/templates/trends-index-mobile.html
+++ b/trends/templates/trends-index-mobile.html
@@ -113,9 +113,9 @@
 			Death rate by GDP Per Capita
 		</div>
 		<div id="container3" style="width:100%; height: 90%; margin: 0 auto;" class="border">	
+			<script src="https://code.highcharts.com/highcharts-more.js"></script>
 			<script>
 				_death_rate_dict = {{ death_rate_dict|safe }}
-
 
 				Highcharts.chart('container3', {
 				    chart: {
