--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -11,16 +11,6 @@
 			margin:0;
 			padding:0;
 		}
-/*		div {
-		    margin:0;
-		    border: 1px solid black;
-		    width: 100%;
-		    height: 100%;
-		    padding:0;
-		    box-sizing:border-box;
-		    -moz-box-sizing:border-box;
-		    -webkit-box-sizing:border-box;
-		}*/
 		#test_id {
 			margin-left:-8%;
 			margin-top:-10%;
@@ -109,7 +99,7 @@
 					</div>
 				</form>
 
-				<button type="button" class="btn btn-dark float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Click to modify chart data</button>
+				<button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Update country and state info on chart</button>
 
 				<div class="modal fade" id="region-filter-modal" role="dialog">
 				    <div class="modal-dialog" style="padding-top: 15%">
