refresh with today's data

--- a/dashboard/templates/dashboard-index-mobile.html
+++ b/dashboard/templates/dashboard-index-mobile.html
@@ -79,7 +79,7 @@
 		</div>
 			
 		<div style="clear:both;padding-top:10px;margin:0px">
-			<hr width:3px>
+			<hr style="border: 1px solid #676767;">
 		</div>
 
 		<!------------------------------------->
@@ -99,7 +99,7 @@
 					</div>
 				</form>
 
-				<button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Update country and state info on chart</button>
+				<button type="button" class="btn btn-primary float-right" data-toggle="modal" data-target="#region-filter-modal" style="width:35%;height:auto;font-size:12px;padding:1px">Add countries and states to chart</button>
 
 				<div class="modal fade" id="region-filter-modal" role="dialog">
 				    <div class="modal-dialog" style="padding-top: 15%">
