--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -51,8 +51,7 @@
 				{% endif %}
 			</div>
 
-
-			<ul class="nav navbar-nav">
+			<!-- <ul class="navbar-nav mr-auto">
 				{% if tab == "dashboard" %}
 					<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link active">Dashboard</a></li>
         		{% else %}
@@ -66,6 +65,7 @@
         		{% endif %}
         	</ul>
         </div>
+        <div class="container-fluid"> -->
 
 
 			<button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
@@ -82,7 +82,7 @@
 						<li> Welcome, {{ user.get_username }}! </li>
 					{% endif %}
 
-					<!-- {% if tab == "dashboard" %}
+					{% if tab == "dashboard" %}
 						<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link active">Dashboard</a></li>
             		{% else %}
             			<li class="nav-item"><a href="{% url 'dashboard-index' %}" class="nav-link">Dashboard</a></li>
@@ -93,7 +93,7 @@
             		{% else %}
             			<li class="nav-item"><a href="{% url 'trends-index' %}" class="nav-link">Visualizations</a></li>
             		{% endif %}
- -->
+
             		{% if request.user_agent.is_mobile %}
             			{% if user.is_authenticated %}
             				<li class="nav-item"><a href="{% url 'account_logout'%}" class="nav-link">Log Out</a></li>
