--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -15,6 +15,10 @@
 	  gtag('config', 'UA-166040527-1');
 	</script>
 
+	<!-- Google AdSense -->
+	<script data-ad-client="ca-pub-6801292448844678" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
